REFACTOR: doc+meilleurs filtres pour les joueurs
