# src/player/player.controller.ts
@@ -3,7 +3,7 @@ import { validationResult } from "express-validator";
 import { playerCollection } from "./player.collection";
 
 export class PlayerController {
-    static async getAllPlayers(req : Request, res : Response) {
+    static async getAllPlayers(req: Request, res: Response) {
         const validator = validationResult(req);
 
         if (!validator.isEmpty()) {
@@ -17,17 +17,17 @@ export class PlayerController {
 
         const players = await playerCollection.aggregate([
             {
-                $match: {
-                    $and: [
-                        queryLastName ? { lastName: queryLastName } : {},
-                        queryTour ? { tour: queryTour } : {},
-                        queryCountry ? { country: queryCountry } : {}
-                    ]
-                }
+            $match: {
+                $and: [
+                queryLastName ? { lastName: { $regex: queryLastName, $options: 'i' } } : {},
+                queryTour ? { tour: queryTour } : {},
+                queryCountry ? { country: { $regex: queryCountry, $options: 'i' } } : {}
+                ]
+            }
             }
         ]).toArray();
 
         res.send(players);
-        
+
     }
 }
